refactor(llm): align code with core conventions